# EigenGap

./: .gitignore  Makefile.am  Makefile.in  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  install.sh  makedoc.g  read.g
.github/workflows/: CI.yml
difficult_cases/: matrix1  matrix2
doc/: EigenGap.bib  Intro.autodoc
examples/: FirstSession.g
gap/: EigenGap.gd  EigenGap.gi
src/: EigenGap.cc
src/.deps/: EigenGap_la-EigenGap.Tpo
tst/: testall.g
